syntax = "proto3";
package hankstodo_app;


option java_package = "hankstodo.app";

message TodoList {
   string sid = 1;
   string name = 2;
}

message inAddToDo {
   string arg0 = 1;
}

message outAddToDo {
   string arg0 = 1;
}
